--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.proyecto2pdm115" >
+    package="com.example.proyecto2pdm115">
 
     <uses-permission android:name="android.permission.SEND_SMS" />
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
-
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".CamaraActivity"
+            android:exported="false" />
         <activity
             android:name=".principal"
-            android:label="@string/app_name"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,65 +26,56 @@
         </activity>
         <activity
             android:name=".categorias"
-            android:label="@string/title_activity_categorias" >
-        </activity>
+            android:label="@string/title_activity_categorias"></activity>
         <activity
             android:name=".bebidas"
-            android:label="@string/title_activity_bebidas" >
-        </activity>
+            android:label="@string/title_activity_bebidas"></activity>
         <activity
             android:name=".porciones"
-            android:label="@string/title_activity_porciones" >
-        </activity>
+            android:label="@string/title_activity_porciones"></activity>
         <activity
             android:name=".parrillada"
-            android:label="@string/title_activity_parrillada" >
-        </activity>
+            android:label="@string/title_activity_parrillada"></activity>
         <activity
             android:name=".mariscos"
-            android:label="@string/title_activity_mariscos" >
-        </activity>
+            android:label="@string/title_activity_mariscos"></activity>
         <activity
             android:name=".ControlMenu"
-            android:label="@string/title_activity_control_menu" >
-        </activity>
+            android:label="@string/title_activity_control_menu"></activity>
         <activity
             android:name=".administrador"
-            android:label="@string/title_activity_administrador" >
-        </activity>
-        <!--<activity
+            android:label="@string/title_activity_administrador"></activity>
+        <!--
+<activity
             android:name=".controlPlatos"
             android:label="@string/title_activity_control_platos" >
-        </activity>-->
+        </activity>
+        -->
         <activity
             android:name=".Carrito"
-            android:label="@string/title_activity_carrilto" >
-        </activity>
+            android:label="@string/title_activity_carrilto"></activity>
         <activity
             android:name=".RegistroSms"
-            android:label="@string/title_activity_registro_sms" >
-        </activity>
+            android:label="@string/title_activity_registro_sms"></activity>
         <activity
             android:name=".Acerca"
-            android:label="@string/title_activity_acerca" >
-        </activity>
+            android:label="@string/title_activity_acerca"></activity>
         <activity
             android:name=".ListadoFinal"
             android:label="@string/title_activity_listado_final"
-            tools:ignore="Instantiatable">
-        </activity>
+            tools:ignore="Instantiatable"></activity>
         <activity
             android:name=".Notas"
-            android:label="@string/title_activity_notas" >
-        </activity>
-        <!--<activity
+            android:label="@string/title_activity_notas"></activity>
+        <!--
+<activity
             android:name=".ListadoPedido"
             android:label="@string/title_activity_listado_pedido" >
-        </activity>-->
+        </activity>
+        -->
         <activity
             android:name=".Pedido"
-            android:label="@string/title_activity_pedido" >
-        </activity>
+            android:label="@string/title_activity_pedido"></activity>
     </application>
 
 </manifest>
