--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.FLASHLIGHT" />
 
+
+    //permisos para cargar la imagen
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
