--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,9 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/Theme.AppCompat"><![CDATA[
         //android:theme="@style/AppTheme">
-        <activity
-            android:name=".CamaraActivity"
-            android:exported="false" />
+        ]]>
         <activity
             android:name=".principal"
             android:exported="true"
