--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,25 +4,23 @@
     package="com.example.proyecto2pdm115">
 
     <uses-permission android:name="android.permission.SEND_SMS" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-
-    //permisos para cargar la imagen
-
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat"><![CDATA[
-        //android:theme="@style/AppTheme">
-        ]]>
+        android:theme="@style/Theme.AppCompat">
+        <activity
+            android:name=".notificacionActivity"
+            android:exported="false" />
         <activity
             android:name=".principal"
             android:exported="true"
@@ -35,25 +33,25 @@
         </activity>
         <activity
             android:name=".categorias"
-            android:label="@string/title_activity_categorias"></activity>
+            android:label="@string/title_activity_categorias" />
         <activity
             android:name=".bebidas"
-            android:label="@string/title_activity_bebidas"></activity>
+            android:label="@string/title_activity_bebidas" />
         <activity
             android:name=".porciones"
-            android:label="@string/title_activity_porciones"></activity>
+            android:label="@string/title_activity_porciones" />
         <activity
             android:name=".parrillada"
-            android:label="@string/title_activity_parrillada"></activity>
+            android:label="@string/title_activity_parrillada" />
         <activity
             android:name=".Analgesicos"
-            android:label="@string/title_activity_mariscos"></activity>
+            android:label="@string/title_activity_mariscos" />
         <activity
             android:name=".ControlMenu"
-            android:label="@string/title_activity_control_menu"></activity>
+            android:label="@string/title_activity_control_menu" />
         <activity
             android:name=".administrador"
-            android:label="@string/title_activity_administrador"></activity>
+            android:label="@string/title_activity_administrador" />
         <!--
 <activity
             android:name=".controlPlatos"
@@ -62,20 +60,20 @@
         -->
         <activity
             android:name=".Carrito"
-            android:label="@string/title_activity_carrilto"></activity>
+            android:label="@string/title_activity_carrilto" />
         <activity
             android:name=".RegistroSms"
-            android:label="@string/title_activity_registro_sms"></activity>
+            android:label="@string/title_activity_registro_sms" />
         <activity
             android:name=".Acerca"
-            android:label="@string/title_activity_acerca"></activity>
+            android:label="@string/title_activity_acerca" />
         <activity
             android:name=".ListadoFinal"
             android:label="@string/title_activity_listado_final"
-            tools:ignore="Instantiatable"></activity>
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".Notas"
-            android:label="@string/title_activity_notas"></activity>
+            android:label="@string/title_activity_notas" />
         <!--
 <activity
             android:name=".ListadoPedido"
@@ -84,7 +82,7 @@
         -->
         <activity
             android:name=".Pedido"
-            android:label="@string/title_activity_pedido"></activity>
+            android:label="@string/title_activity_pedido" />
     </application>
 
 </manifest>
