--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
 
     implementation 'com.github.denzcoskun:ImageSlideshow:0.0.6'
 
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
 }
