integracion java mail registro
integracion de la libreria java mail en el registro

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,11 @@ dependencies {
     //Libreria de OSMdroid
     implementation 'org.osmdroid:osmdroid-android:6.1.1'
 
+    //libreria de javaMail
+    implementation files('libs/activation.jar')
+    implementation files('libs/additionnal.jar')
+    implementation files('libs/mail.jar')
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
